--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#82b3c9</color>
     <color name="colorPrimaryDark">#0277bd</color>
     <color name="colorAccent">#0277bd</color>
+
+    <color name="subtitulo">#757575</color>
+    <color name="titulo">#616161</color>
+    <color name="principal_fondo">#EEEEEE</color>
 </resources>
