--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,5 +101,13 @@
         android:background="@drawable/btn_fondo"
         android:text="INGRESAR"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_centerInParent="true"
+        tools:visibility="gone" />
+
 
 </RelativeLayout>
