--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_password"
         android:layout_centerHorizontal="true"
-        android:drawableStart="@drawable/ic_action_name"
+        android:drawableStart="@drawable/ic_password"
         android:hint="contraseña"
         android:drawablePadding="10dp"
         android:layout_marginTop="5dp"
@@ -78,23 +78,13 @@
         android:inputType="textPassword"
         />
 
-    <Switch
-        android:id="@+id/switch_recordar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginLeft="200dp"
-        android:layout_below="@+id/edit_pasword"
-        android:layout_marginTop="20dp"
-        android:text="Recordar"/>
-
     <Button
         android:id="@+id/button_ingresar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/switch_recordar"
+        android:layout_below="@+id/edit_pasword"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:textSize="20sp"
         android:textColor="#757575"
         android:padding="10dp"
