--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,6 +88,7 @@
         android:textSize="20sp"
         android:textColor="#757575"
         android:padding="10dp"
+        android:onClick="validacion"
         android:background="@drawable/btn_fondo"
         android:text="INGRESAR"/>
 
